# learn-rl

./: .gitignore  README.md  chat_with_model.py  dpo_scratch.py  grpo_soft_scratch.py  ppo_scratch.py  pyproject.toml
data/: dpo_dummy_data.json  grpo_dummy_data.json  ppo_critic_data.json  ppo_dummy_data.json
