[project]
name = "learn-rl"
version = "0.1.0"
description = "Learning Reinforcement Learning Methods"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "python-dotenv>=1.1.0",
    "ruff>=0.11.5",
    "torch>=2.6.0",
    "transformers>=4.51.3",
    "trl>=0.16.1",
]
